clusterip-service.yaml
#clusterip-service.yaml

apiVersion: v1
kind: Service
metadata: 
  name: flask-clusterip-service
spec:
  selector:
    app: flask-hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
