nodeport-service.yaml
# nodeport-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: flask-nodeport-service
spec:
  selector:
    app: flask-hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30911
  type: NodePort
